Cherry-Pick changes in pull request #7 "Refactor proposal".