@@ -11,8 +11,6 @@ import org.monte.media.av.MovieWriterSpi;
 import javax.imageio.stream.ImageOutputStream;
 import java.io.File;
 import java.io.IOException;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 /**
@@ -22,7 +20,7 @@ import java.util.List;
  */
 public class QuickTimeWriterSpi implements MovieWriterSpi {
 
-    private final static List<String> extensions = Collections.unmodifiableList(Arrays.asList(new String[]{"mov"}));
+    private final static List<String> extensions = List.of(new String[]{"mov"});
 
     @Override
     public MovieWriter create(File file) throws IOException {
